2009-08-18	Joel Sherrill <joel.sherrill@OARcorp.com>

	* psx01/init.c, psx01/psx01.scn: Add test case for nanosleep with NULL
	remaining pointer.

2009-08-17	Santosh G Vattam <vattam.santosh@gmail.com>

	* psx05/init.c, psx05/psx05.scn: Add test case for initializing
	a recursize mutex.

2009-08-12	Joel Sherrill <joel.sherrill@oarcorp.com>

	* psxfile01/test.c, psxstat/test.c, psxtime/test.c: Eliminate test
	routines TICKS_PER_SECOND and get_ticks_per_second() in favor of new
	rtems_clock_get_ticks_per_second().

2009-08-10	Joel Sherrill <joel.sherrill@oarcorp.com>

	* psxsignal01/init.c: Convert calls to legacy routine rtems_clock_get(
	RTEMS_CLOCK_GET_xxx, ..) to rtems_clock_get_xxx().

2009-08-10	Joel Sherrill <joel.sherrill@oarcorp.com>

	* psxstat/test.c, psxtime/test.c: Convert calls to legacy routine
	rtems_clock_get( RTEMS_CLOCK_GET_TOD, ..) to rtems_clock_get_tod(..).

2009-08-06	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, configure.ac: Add test case for user providing their own
	stack to a POSIX thread.
	* psxstack01/.cvsignore, psxstack01/Makefile.am, psxstack01/init.c,
	psxstack01/psxstack01.doc, psxstack01/psxstack01.scn: New files.

2009-08-06	Joel Sherrill <joel.sherrill@OARcorp.com>

	* psxmsgq04/init.c, psxmsgq04/psxmsgq04.scn: Tinker with test to ensure
	that it hits both failing to allocate memory for the message queue
	name and message buffers.

2009-08-06	Joel Sherrill <joel.sherrill@OARcorp.com>

	* psxintrcritical01/init.c: Lower microseconds per tick so tests run
	quicker and more reliably hit the intended critical section.

2009-08-05	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, configure.ac: Add a test to exercise an odd case in
	_POSIX_signals_Clear_signals.
	* psxsignal05/.cvsignore, psxsignal05/Makefile.am, psxsignal05/init.c,
	psxsignal05/psxsignal05.doc, psxsignal05/psxsignal05.scn: New files.

2009-08-05	Joel Sherrill <joel.sherrill@oarcorp.com>
