@@ -9,9 +9,18 @@ Init - pthread_create - EINVAL (attr not initialized)
 Init - pthread_create - EINVAL (stacksize too small)
 Init - pthread_create - EAGAIN (stacksize too large)
 Init - pthread_create - EINVAL (invalid inherit scheduler)
+Init - pthread_attr_settime - EINVAL ( null attribute )
+Init - pthread_attr_gettime - EINVAL ( null attribute )
+Init - pthread_attr_settime - EINVAL ( is initialized )
+Init - pthread_attr_gettime - EINVAL ( is initialized )
+Init - pthread_attr_settime - EINVAL ( invalid clock allowed )
+Init - pthread_attr_gettime - EINVAL ( NULL clock allowed )
+Init - validate pthread_attr_setcputime - CLOCK_DISABLED
+Init - validate pthread_attr_setcputime - CLOCK_ENABLED
 Init - pthread_create - ENOTSUP (unsupported system contention scope)
 Init - pthread_create - SUCCESSFUL (inherit scheduler)
 Task_1 - exitting
+
 Init - pthread_attr_setscope - EINVAL (NULL attr)
 Init - pthread_attr_setscope - ENOTSUP
 Init - pthread_attr_setscope - EINVAL (not initialized attr)
@@ -22,6 +31,7 @@ Init - pthread_attr_getscope - EINVAL (NULL scope)
 Init - pthread_attr_getscope - EINVAL (not initialized attr)
 Init - pthread_attr_getscope - SUCCESSFUL
 Init - current scope attribute = 0
+
 Init - pthread_attr_setinheritsched - EINVAL (NULL attr)
 Init - pthread_attr_setinheritsched - EINVAL (not initialized attr)
 Init - pthread_attr_setinheritsched - ENOTSUP (invalid inheritsched)
@@ -31,6 +41,7 @@ Init - pthread_attr_getinheritsched - EINVAL (NULL inheritsched)
 Init - pthread_attr_getinheritsched - EINVAL (not initialized attr)
 Init - pthread_attr_getinheritsched - SUCCESSFUL
 Init - current inherit scheduler attribute = 1
+
 Init - pthread_attr_setschedpolicy - EINVAL (NULL attr)
 Init - pthread_attr_setschedpolicy - EINVAL (not initialized attr)
 Init - pthread_attr_setschedpolicy - ENOTSUP (invalid schedpolicy)
@@ -40,6 +51,7 @@ Init - pthread_attr_getschedpolicy - EINVAL (NULL schedpolicy)
 Init - pthread_attr_getschedpolicy - EINVAL (not initialized attr)
 Init - pthread_attr_getschedpolicy - SUCCESSFUL
 Init - current scheduler policy attribute = 2
+
 Init - pthread_attr_setstacksize - EINVAL (NULL attr)
 Init - pthread_attr_setstacksize - EINVAL (not initialized attr)
 Init - pthread_attr_setstacksize - SUCCESSFUL (low stacksize)
@@ -49,6 +61,7 @@ Init - pthread_attr_getstacksize - EINVAL (NULL stacksize)
 Init - pthread_attr_getstacksize - EINVAL (not initialized attr)
 Init - pthread_attr_getstacksize - SUCCESSFUL
 Init - current stack size attribute is OK
+
 Init - pthread_attr_setstackaddr - EINVAL (NULL attr)
 Init - pthread_attr_setstackaddr - EINVAL (not initialized attr)
 Init - pthread_attr_setstackaddr - SUCCESSFUL
@@ -57,6 +70,7 @@ Init - pthread_attr_getstackaddr - EINVAL (NULL stackaddr)
 Init - pthread_attr_getstackaddr - EINVAL (not initialized attr)
 Init - pthread_attr_getstackaddr - SUCCESSFUL
 Init - current stack address attribute = 0x0
+
 Init - pthread_attr_setdetachstate - EINVAL (NULL attr)
 Init - pthread_attr_setdetachstate - EINVAL (not initialized attr)
 Init - pthread_attr_setdetachstate - EINVAL (invalid detachstate)
@@ -66,6 +80,7 @@ Init - pthread_attr_getdetachstate - EINVAL (NULL detatchstate)
 Init - pthread_attr_getdetachstate - EINVAL (not initialized attr)
 Init - pthread_attr_getdetachstate - SUCCESSFUL
 Init - current detach state attribute = 1
+
 Init - pthread_attr_getschedparam - SUCCESSFUL
 Init - sched priority      = 2
 Init - ss_low_priority     = 0
@@ -78,6 +93,7 @@ Init - pthread_attr_setschedparam - SUCCESSFUL
 Init - pthread_attr_getschedparam - EINVAL (NULL attr)
 Init - pthread_attr_getschedparam - EINVAL (not initialized attr)
 Init - pthread_attr_getschedparam - EINVAL (NULL schedparam)
+
 Init - pthread_getschedparam - EINVAL (NULL policy)
 Init - pthread_getschedparam - EINVAL (NULL schedparam)
 Init - pthread_getschedparam - ESRCH (bad thread)
@@ -87,6 +103,7 @@ Init - sched priority      = 2
 Init - ss_low_priority     = 0
 Init - ss_replenish_period = (0, 0)
 Init - ss_initial_budget = (0, 0)
+
 Init - pthread_setschedparam - EINVAL (NULL schedparam)
 Init - pthread_setschedparam - EINVAL (invalid priority)
 Init - pthread_setschedparam - EINVAL (invalid policy)
@@ -95,4 +112,21 @@ Init - pthread_setschedparam - EINVAL (replenish == 0)
 Init - pthread_setschedparam - EINVAL (budget == 0)
 Init - pthread_setschedparam - EINVAL (replenish < budget)
 Init - pthread_setschedparam - EINVAL (invalid priority)
+
+Init - pthread_attr_init - SUCCESSFUL
+Init - pthread_attr_setinheritsched - EXPLICIT - SUCCESSFUL
+Init - pthread_attr_setschedpolicy - SUCCESSFUL
+Init - pthread_attr_setschedparam - SUCCESSFUL
+Time elapsed Task_2:  0 (seconds)
+Time elapsed Task_2:  1 (seconds)
+Time elapsed Task_2:  2 (seconds)
+Time elapsed Task_2:  3 (seconds)
+Time elapsed Task_2:  4 (seconds)
+Time elapsed Task_2:  5 (seconds)
+Time elapsed Task_2:  6 (seconds)
+Time elapsed Task_2:  7 (seconds)
+Time elapsed Task_2:  8 (seconds)
+Time elapsed Task_2:  9 (seconds)
+Time elapsed Task_2: 10 (seconds)
+Task_2 - exitting
 *** END OF POSIX TEST 7 ***
